2009/08/06 (TS):
 - drvUdpSock.c: clip transmitted payload to UDPPAYLOADSIZE, not LANPKTMAX!
2009/08/06 (TS):
 - drvAmdEthIpBasic.c: since buffer pointer is adjusted by ETHERPADSZ
   must reduce buffer size by same amount.
2009/08/06 (TS):
 - added 'e1k_lldrv.c' which contains low-level driver entry
   points for intel e1000 chips. The file also implements
   these entry points based on intel's e1000_api.h.
   The driver is derived from 'if_em' (intel).
2009/08/06 (TS):
 - renamed 'drvMveIpBasic.c' -> 'drvGnrIpBasic.c' and created a 
   'low-level driver' API. This allows for re-using this code
   for all NIC drivers that provide the same low-level API as
   the mv64360 (i.e., most recently written drivers by me
   such as the mvme3100's FEC or an e1000 driver based on
   intel's e1000_api.h).
   mv64360-specific entry points are defined in 'mve_lldrv.c'.
2009/07/31 (TS):
 - do not byteswap IP header checksum when inserting (fillinSrcCsumIp()).
2009/07/28 (TS):
 - removed unnecessary inclusion of drvLan9118.h from lanIpBasic.h.
 - silenced some compiler warnings
 - added udpCommJoinMcast(), udpCommLeaveMcast() and udpCommSetIfMcast().
2009/06/26 (TS):
 - added udpCommAllocPacket()
 - added udpCommSendPkt(), udpCommSendPktTo() (BSD only, so far)
 - define UDPCOMM_PKTSZ (max size of payload)
 - Makefile.Host builds a small library with just udpCommBSD
2009/04/21 (TS):
 - udpSockHdrsReflect() needs to convert port number to host endianness
   before passing to fillinSrcCsumUdp().
2009/02/18 (TS):
 - iir2_bpmsim declared in new header (bpmsim.h)
 - iir2_bpmsim takes new argument (2nd initial value) which
   allows to add random phase + time-of-arrival.
 - add (compile-time-optional) SDDS reader which allows
   padProtoHost to play back waveforms from an SDDS file.
 - streamSim() adds (common-mode to all 4 channels) random
   phase + time-of-arrival to simulated waveforms.
 - padProtoHost has 'server mode' with new '-P <server_xmit_period>'